--- a/research.html
+++ b/research.html
@@ -18,10 +18,11 @@
 
 <h1>Research</h1>
 		
-My research interests are in algebraic geometry, K-theory and
-representation theory. In particular, I am interested in the
-application of Tate objects, homotopical methods and derived algebraic
-geometry to solve problems in these areas.
+My main research interests are: derived algebraic geometry and
+geometric representation theory. 
+
+<!-- In particular, I am interested in the application of Tate objects, homotopical methods and derived algebraic
+geometry to solve problems in these areas.  -->
 
 <br>
 
