--- a/teaching.html
+++ b/teaching.html
@@ -31,7 +31,7 @@ Math 347H <b>Fundamental Mathematics, Honors</b>
 
 <h2>Fall 2020 </h2>
 
-Math 241H <b>Calculus 3 Honors</b> - all material is accessible on <a href="https://learn.illinois.edu/course/view.php?id=52599">Moodle</a>.
+Math 241H <b>Calculus 3 Honors</b>.
 
 <h2>Spring 2020 </h2>
 
