--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ I am a mathematician working in derived algebraic geometry and geometric represe
 <h2>About me</h2>
 
 <p>
-	Since 2023, I am a postdoctoral fellow at the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>, part of the research group <a href="https://hkumath.hku.hk/~xuhuahe/">Xuhua He</a>.
+	Since 2023, I am a postdoctoral fellow, in the research group <a href="https://hkumath.hku.hk/~xuhuahe/">Xuhua He</a>, at the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.
 </p>
 
 <p>
-	From 2021 to 2023, I am a postdoctoral fellow at the <a href="https://www.math.cuhk.edu.hk">Chinese University of Hong Kong</a> mentored by <a href="https://sites.google.com/view/mmcbreen/home">Michael McBreen</a>.
+	From 2021 to 2023, I was a postdoctoral fellow at the <a href="https://www.math.cuhk.edu.hk">Chinese University of Hong Kong</a> mentored by <a href="https://sites.google.com/view/mmcbreen/home">Michael McBreen</a>.
 </p>
 
 <p>
