--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I am a mathematician working in derived algebraic geometry and geometric represe
 <h2>About me</h2>
 
 <p>
-	Since 2023, I am a postdoctoral fellow, in the research group <a href="https://hkumath.hku.hk/~xuhuahe/">Xuhua He</a>, at the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.
+	Since 2023, I am a postdoctoral fellow, in the research group of <a href="https://hkumath.hku.hk/~xuhuahe/">Xuhua He</a>, at the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.
 </p>
 
 <p>
@@ -69,7 +69,7 @@ I am a mathematician working in derived algebraic geometry and geometric represe
 </p>
 
 <p>
-	From 2018 to 2021 I was a J.L. Doob Research Assistant Professor at the <a href="https://math.illinois.edu">University of Illinois at Urbana--Champaign</a> mentored by Chris Dodd.	
+	From 2018 to 2021, I was a J.L. Doob Research Assistant Professor at the <a href="https://math.illinois.edu">University of Illinois at Urbana--Champaign</a> mentored by Chris Dodd.	
 </p>
 <p>
 	Before that I was a graduate student at <a href="https://www.math.northwestern.edu">Northwestern University</a> advised by <a href="http://math.uchicago.edu/~nick/">Nick Rozenblyum</a>. 
