--- a/teaching/math511/math511.html
+++ b/teaching/math511/math511.html
@@ -3,7 +3,7 @@
 		<a href="../../index.html">Home</a>
 		<a href="../../research.html">Research</a>
 		<a class="active" href="../../teaching.html">Teaching</a>
-		<a href="../../about.html">About</a>
+		<!-- <a href="../../about.html">About</a> -->
 	</div>
 		
 		<head>
