--- a/teaching.html
+++ b/teaching.html
@@ -17,6 +17,10 @@
 
 <h1>Teaching</h1>
 
+<h2>Spring 2024</h2>
+
+<b><a href="teaching/math2102/math2102.html">Linear Algebra II</a></b>
+
 <h2>Fall 2021</h2>
 
 <b><a href="teaching/dag-seminar/dag-seminar.html">Seminar on Derived Algebraic Geometry</a></b>
