updated-syl-hw-to-ws

--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -95,12 +95,12 @@
 		</ol>
 	</div> -->
 
-<h2>Homework:</h2>
+<h2>Worksheets:</h2>
 
-The Homework is due every Monday, starting on Jan. 22 (see the Course Schedule for details).
+<!-- The Homework is due every Monday, starting on Jan. 22 (see the Course Schedule for details). -->
 
 <ol>
-    <li><a href="hw/hw1.pdf">Homework 1</a></li>
+    <li><a href="ws/ws1.pdf">Worksheet 1</a></li>
 </ol>
 
 <!-- <h2>Worksheets:</h2> -->
