--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -100,7 +100,8 @@
 <!-- The Homework is due every Monday, starting on Jan. 22 (see the Course Schedule for details). -->
 
 <ol>
-    <li><a href="ws/ws1.pdf">Worksheet 1</a></li>
+    <li><a href="ws/ws1.pdf">Worksheet 1</a> (<a href="ws/ws1-sol.pdf">Solutions 1</a>) </li>
+	<li><a href="ws/ws2.pdf">Worksheet 2</a></li>
 </ol>
 
 <!-- <h2>Worksheets:</h2> -->
