--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -102,9 +102,13 @@
 <ol>
     <li><a href="ws/ws1.pdf">Worksheet 1</a> (<a href="ws/ws1-sol.pdf">Solutions 1</a>) </li>
 	<li><a href="ws/ws2.pdf">Worksheet 2</a></li>
+	<li><a href="ws/ws3.pdf">Worksheet 3</a></li>
 </ol>
 
-<!-- <h2>Worksheets:</h2> -->
+<h2>Homework:</h2>
+<ol>
+    <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> </li>
+</ol>
 
 <!-- <h2>References:</h2>
 		
