--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -103,6 +103,7 @@
     <li><a href="ws/ws1.pdf">Worksheet 1</a> (<a href="ws/ws1-sol.pdf">Solutions 1</a>) </li>
 	<li><a href="ws/ws2.pdf">Worksheet 2</a></li>
 	<li><a href="ws/ws3.pdf">Worksheet 3</a></li>
+	<li><a href="ws/ws4.pdf">Worksheet 4</a></li>
 </ol>
 
 <h2>Homework:</h2>
