--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -104,11 +104,13 @@
 	<li><a href="ws/ws2.pdf">Worksheet 2</a></li>
 	<li><a href="ws/ws3.pdf">Worksheet 3</a></li>
 	<li><a href="ws/ws4.pdf">Worksheet 4</a></li>
+	<li><a href="ws/ws5.pdf">Worksheet 5</a></li>
 </ol>
 
 <h2>Homework:</h2>
 <ol>
     <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> </li>
+	<li><a href="hw/hw2.pdf">Homework 1</a> <b>Due Feb. 26</b> </li>
 </ol>
 
 <!-- <h2>References:</h2>
