--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -101,14 +101,14 @@
 
 <ol>
     <li><a href="ws/ws1.pdf">Worksheet 1</a> (<a href="ws/ws1-sol.pdf">Solutions 1</a>) </li>
-	<li><a href="ws/ws2.pdf">Worksheet 2</a></li>
+	<li><a href="ws/ws2.pdf">Worksheet 2</a> (<a href="ws/ws2-sol.pdf">Solutions 2</a>) </li>
 	<li><a href="ws/ws3.pdf">Worksheet 3</a></li>
 	<li><a href="ws/ws4.pdf">Worksheet 4</a></li>
 </ol>
 
 <h2>Homework:</h2>
 <ol>
-    <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> </li>
+    <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> (<a href="hw/hw1-sol.pdf">Solutions HW 1</a>) </li>
 </ol>
 
 <!-- <h2>References:</h2>
