--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -109,7 +109,7 @@
 
 <h2>Homework:</h2>
 <ol>
-    <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> </li>
+    <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> (<a href="hw/hw1-sol.pdf">Solutions HW 1</a>) </li>
 	<li><a href="hw/hw2.pdf">Homework 2</a> <b>Due Feb. 26</b> </li>
 </ol>
 
