--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -105,12 +105,14 @@
 	<li><a href="ws/ws3.pdf">Worksheet 3</a></li>
 	<li><a href="ws/ws4.pdf">Worksheet 4</a></li>
 	<li><a href="ws/ws5.pdf">Worksheet 5</a></li>
+	<li><a href="ws/ws6.pdf">Worksheet 6</a></li>
 </ol>
 
 <h2>Homework:</h2>
 <ol>
     <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> (<a href="hw/hw1-sol.pdf">Solutions HW 1</a>) </li>
 	<li><a href="hw/hw2.pdf">Homework 2</a> <b>Due Feb. 26</b> </li>
+	<li><a href="hw/hw3.pdf">Homework 3</a> <b>Due Mar. 18</b> </li>
 </ol>
 
 <!-- <h2>References:</h2>
