--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -111,7 +111,7 @@
 <h2>Homework:</h2>
 <ol>
     <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> (<a href="hw/hw1-sol.pdf">Solutions HW 1</a>) </li>
-	<li><a href="hw/hw2.pdf">Homework 2</a> <b>Due Feb. 26</b> </li>
+	<li><a href="hw/hw2.pdf">Homework 2</a> <b>Due Feb. 26</b> (<a href="hw/hw2-sol.pdf">Solutions HW 2</a>) </li>
 	<li><a href="hw/hw3.pdf">Homework 3</a> <b>Due Mar. 18</b> </li>
 </ol>
 
