--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -55,7 +55,7 @@
 
 <p>All the important information about the class can be found in the <a href="syllabus-2012.pdf">Syllabus</a>.</p>
 
-<p>In the <a href="outline-2102.pdf">Course Schedule</a> you can find the plan for the semester. Plans change! I will update it regularly to reflect how things went.</p>
+<p>In the <a href="outline-2102.pdf">Course Schedule</a> you can find the plan for the semester. Plans change! <a href="diary-2012.pdf">Here</a> is a more up to date schedule of how things are going.</p>
 
 <p>We will be using the textbook: <i>Linear Algebra Done Right</i> (<b>4th edition</b>) by Sheldon Axler. The book was published as open access, you can download a copy <a href="https://linear.axler.net">here</a> </p>
 
@@ -106,13 +106,14 @@
 	<li><a href="ws/ws4.pdf">Worksheet 4</a></li>
 	<li><a href="ws/ws5.pdf">Worksheet 5</a></li>
 	<li><a href="ws/ws6.pdf">Worksheet 6</a></li>
+	<li><a href="ws/ws7.pdf">Worksheet 7</a></li>
 </ol>
 
 <h2>Homework:</h2>
 <ol>
     <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> (<a href="hw/hw1-sol.pdf">Solutions HW 1</a>) </li>
 	<li><a href="hw/hw2.pdf">Homework 2</a> <b>Due Feb. 26</b> (<a href="hw/hw2-sol.pdf">Solutions HW 2</a>) </li>
-	<li><a href="hw/hw3.pdf">Homework 3</a> <b>Due Mar. 18</b> </li>
+	<li><a href="hw/hw3.pdf">Homework 3</a> <b>Due Mar. 25</b> </li>
 </ol>
 
 <!-- <h2>References:</h2>
