hw4-ws8-diary-update

--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -107,6 +107,7 @@
 	<li><a href="ws/ws5.pdf">Worksheet 5</a></li>
 	<li><a href="ws/ws6.pdf">Worksheet 6</a></li>
 	<li><a href="ws/ws7.pdf">Worksheet 7</a></li>
+	<li><a href="ws/ws8.pdf">Worksheet 8</a></li>
 </ol>
 
 <h2>Homework:</h2>
@@ -114,6 +115,7 @@
     <li><a href="hw/hw1.pdf">Homework 1</a> <b>Due Feb. 5</b> (<a href="hw/hw1-sol.pdf">Solutions HW 1</a>) </li>
 	<li><a href="hw/hw2.pdf">Homework 2</a> <b>Due Feb. 26</b> (<a href="hw/hw2-sol.pdf">Solutions HW 2</a>) </li>
 	<li><a href="hw/hw3.pdf">Homework 3</a> <b>Due Mar. 25</b> </li>
+	<li><a href="hw/hw4.pdf">Homework 4</a> <b>Due Apr. 8</b> </li>
 </ol>
 
 <!-- <h2>References:</h2>
