final-review-pbs

--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -109,6 +109,7 @@
 	<li><a href="ws/ws7.pdf">Worksheet 7</a></li>
 	<li><a href="ws/ws8.pdf">Worksheet 8</a></li>
 	<li><a href="ws/ws9.pdf">Worksheet 9</a></li>
+	<li><a href="ws/final-review.pdf">Review Problems</a></li>
 </ol>
 
 <h2>Homework:</h2>
