--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -107,7 +107,7 @@
 	<li><a href="ws/ws5.pdf">Worksheet 5</a></li>
 	<li><a href="ws/ws6.pdf">Worksheet 6</a></li>
 	<li><a href="ws/ws7.pdf">Worksheet 7</a></li>
-	<li><a href="ws/ws8.pdf">Worksheet 8</a></li>
+	<li><a href="ws/ws8.pdf">Worksheet 8</a> (<a href="ws/ws8-sol.pdf">Solutions 8</a>)</li>
 	<li><a href="ws/ws9.pdf">Worksheet 9</a></li>
 	<li><a href="ws/final-review.pdf">Review Problems</a></li>
 </ol>
