--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -104,7 +104,7 @@
 	<li><a href="ws/ws2.pdf">Worksheet 2</a> (<a href="ws/ws2-sol.pdf">Solutions 2</a>)</li>
 	<li><a href="ws/ws3.pdf">Worksheet 3</a> (<a href="ws/ws4-sol.pdf">Solutions 3</a>)</li>
 	<li><a href="ws/ws4.pdf">Worksheet 4</a> (<a href="ws/ws4-sol.pdf">Solutions 4</a>)</li>
-	<li><a href="ws/ws5.pdf">Worksheet 5</a></li>
+	<li><a href="ws/ws5.pdf">Worksheet 5</a> (<a href="ws/ws5-sol.pdf">Solutions 5</a>)</li>
 	<li><a href="ws/ws6.pdf">Worksheet 6</a></li>
 	<li><a href="ws/ws7.pdf">Worksheet 7</a></li>
 	<li><a href="ws/ws8.pdf">Worksheet 8</a> (<a href="ws/ws8-sol.pdf">Solutions 8</a>)</li>
