ws6-sol-ws7-sol-partial

--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -105,8 +105,8 @@
 	<li><a href="ws/ws3.pdf">Worksheet 3</a> (<a href="ws/ws4-sol.pdf">Solutions 3</a>)</li>
 	<li><a href="ws/ws4.pdf">Worksheet 4</a> (<a href="ws/ws4-sol.pdf">Solutions 4</a>)</li>
 	<li><a href="ws/ws5.pdf">Worksheet 5</a> (<a href="ws/ws5-sol.pdf">Solutions 5</a>)</li>
-	<li><a href="ws/ws6.pdf">Worksheet 6</a></li>
-	<li><a href="ws/ws7.pdf">Worksheet 7</a></li>
+	<li><a href="ws/ws6.pdf">Worksheet 6</a> (<a href="ws/ws6-sol.pdf">Solutions 6</a>)</li>
+	<li><a href="ws/ws7.pdf">Worksheet 7</a> (<a href="ws/ws7-sol.pdf">Solutions 7 - partial</a>)</li>
 	<li><a href="ws/ws8.pdf">Worksheet 8</a> (<a href="ws/ws8-sol.pdf">Solutions 8</a>)</li>
 	<li><a href="ws/ws9.pdf">Worksheet 9</a></li>
 	<li><a href="ws/final-review.pdf">Review Problems</a></li>
