final-review-partial-sol

--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -109,7 +109,7 @@
 	<li><a href="ws/ws7.pdf">Worksheet 7</a> (<a href="ws/ws7-sol.pdf">Solutions 7 - partial</a>)</li>
 	<li><a href="ws/ws8.pdf">Worksheet 8</a> (<a href="ws/ws8-sol.pdf">Solutions 8</a>)</li>
 	<li><a href="ws/ws9.pdf">Worksheet 9</a></li>
-	<li><a href="ws/final-review.pdf">Review Problems</a></li>
+	<li><a href="ws/final-review.pdf">Review Problems</a> (<a href="ws/final-review-sol.pdf">Partial Solutions</a>)</li>
 </ol>
 
 <h2>Homework:</h2>
