--- a/teaching/math2102/math2102.html
+++ b/teaching/math2102/math2102.html
@@ -57,7 +57,7 @@
 
 <p>In the <a href="outline-2102.pdf">Course Schedule</a> you can find the plan for the semester. Plans change! <a href="diary-2012.pdf">Here</a> is a more up to date schedule of how things are going.</p>
 
-<p>We will be using the textbook: <i>Linear Algebra Done Right</i> (<b>4th edition</b>) by Sheldon Axler. The book was published as open access, you can download a copy <a href="https://linear.axler.net">here</a> </p>
+<p>We will be using the textbook: Linear Algebra Done Right (<b>4th edition</b>) by Sheldon Axler. The book was published as open access, you can download a copy <a href="https://linear.axler.net">here</a> </p>
 
 <h2>Lecture notes:</h2>
 
