affine-cs-v1-posted

--- a/research.html
+++ b/research.html
@@ -28,6 +28,7 @@ geometry to solve problems in these areas.  -->
 
 <h2>Papers</h2>
 <ol>
+    <li> <a href="papers/affine-cs.pdf">Newton Decomposition on the Quotient Stacks of Loop Groups</a>, joint with X. He and X. Zhu, preliminary version.
     <li> <a href="https://arxiv.org/abs/2212.13572">A Remark on Lurie's Representability Theorem</a>.
     <li> <a href="https://arxiv.org/abs/2010.08095">Prestacks of Tate type</a>.
     <li> <a href="https://arxiv.org/abs/1907.00384">Determinant
