--- a/index.html
+++ b/index.html
@@ -35,19 +35,22 @@ I am a mathematician working in derived algebraic geometry and geometric represe
 <table style="width:100%">
 <tr>
 	<td> <strong>Contact info:</strong>
+		Room 1418
 		<br>
-		Department of Mathematics
+		Shanghai Institute for Mathematics and Interdisciplinary Sciences
 		<br>
-		 The University of Hong Kong
+		Block A, International Innovation Plaza, No. 657 Songhu Road
+		<!-- <br>
+		Run Run Shaw Building, Room 211 -->
 		<br>
-		Run Run Shaw Building, Room 211
-		<br>
-		Pokfulam, Hong Kong
+		Yangpu District, Shanghai, China
 	</td>
 	<td>
+		<!-- <strong> Room number:</strong> 1418
+		<br> -->
 		<strong> Email address:</strong>
 		<br>
-		aronah at hku dot hk
+		aronah at simis dot cn
 		<!-- aheleodoro at cuhk dot edu dot hk -->
 		<br>
 		or
@@ -61,7 +64,11 @@ I am a mathematician working in derived algebraic geometry and geometric represe
 <h2>About me</h2>
 
 <p>
-	Since 2023, I am a postdoctoral fellow, in the research group of <a href="https://hkumath.hku.hk/~xuhuahe/">Xuhua He</a>, at the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.
+	I am an assistant professor at the <a href="https://www.simis.cn">Shanghai Institute for Mathematics and Interdisciplinary Sciences</a>.
+</p>
+
+<p>
+	From 2023 to 2025, I was a postdoctoral fellow, in the research group of <a href="https://hkumath.hku.hk/~xuhuahe/">Xuhua He</a>, at the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.
 </p>
 
 <p>
