--- a/teaching.html
+++ b/teaching.html
@@ -17,6 +17,10 @@
 
 <h1>Teaching</h1>
 
+<h2>Fall 2025</h2>
+
+<b><a href="teaching/ha/plan.pdf">Introduction to Higher Algebra</a></b>
+
 <h2>Spring 2024</h2>
 
 <b><a href="teaching/math2102/math2102.html">Linear Algebra II</a></b>
